syntax = "proto3";

package order;

option go_package = "github.com/dgnydn/binance-order/api/binance-order/v1;orderv1";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
  rpc GetAllOrders(GetAllOrdersRequest) returns (GetAllOrdersResponse) {}
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {}
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {}
}

message Order {
  int64 id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  int64 deleted_at = 4;
  string symbol = 5;
  string side = 6;
  string time_in_force_type = 7;
  int64 quantity = 8;
  string price = 9;
}

message CreateOrderRequest {
  Order order = 1;
}

message CreateOrderResponse {
  bool status = 1;
  Order order = 2;
}

message GetOrderRequest {
  int64 order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message GetAllOrdersRequest {}

message GetAllOrdersResponse {
  repeated Order order = 1;
}

message UpdateOrderRequest {
  int64 order_id = 1;
  Order order = 2;
}

message UpdateOrderResponse {
  bool status = 1;
}

message DeleteOrderRequest {
  int64 order_id = 1;
}

message DeleteOrderResponse {
  bool status = 1;
}
